--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Twitter Benzeri Twit Atma</title>
+  <title>who0ze</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
       <img id="background-img" src="your_background_image.jpg" alt="Background Image"> 
     </div>
     <textarea id="tweet-input" placeholder="Ne düşünüyorsunuz?"></textarea>
-    <button id="tweet-button">Twit At</button>
+    <button id="tweet-button">Gönder</button>
     <div id="tweet-list"></div>
   </div>
   <script src="script.js"></script>
